--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,5 +1,5 @@
 @fontePrincipal: Roboto, sans-serif;
-@fonteDoTitulo: Lobster, cursive;
+@fonteDoTitulo: lobster, cursive;
 @corDoTexto: #fff;
 @corDeFundo: #eb3b5a;
 @corDoTextoDoBotao: #000;
@@ -11,7 +11,7 @@ body {
     color: @corDoTexto;
 }
 
-h1 {
+h1{
     font-family: @fonteDoTitulo;
     font-size: 3em;
 }
@@ -20,7 +20,7 @@ main {
     max-width: 960px;
     width: 100%;
     margin: 0 auto;
-    font-size: 2em;
+    font-size: 2em; 
     text-align: center;
 }
 
@@ -38,7 +38,7 @@ button {
 
 input {
     display: block;
-    margin: 16px auto 0 ;
+    margin: 16px auto 0;
     font-size: 2em;
     max-width: 120px;
     border: none;
@@ -46,6 +46,7 @@ input {
     text-align: center;
     color: #fff;
     border-bottom: 6px solid #fff;
+    
 }
 
 .resultado {
@@ -54,8 +55,9 @@ input {
     border: 8px dotted #fff;
     display: none;
 }
-    span{
-        font-weight: bold;
-        font-size: 3em;
-        display: block;
-    }
+
+span {
+    font-weight: bold;
+    font-size: 3em;
+    display: block;
+}
