--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -9,6 +9,7 @@ body {
     background-color: @corDeFundo;
     font-family: @fontePrincipal;
     color: @corDoTexto;
+    
 }
 
 h1{
@@ -58,6 +59,22 @@ input {
 
 span {
     font-weight: bold;
-    font-size: 3em;
+    font-size: 2em;
     display: block;
+}
+
+@media screen and (max-width: 768px){
+    main {
+        max-width: 100vw;
+        font-size: 16px;
+        align-items: center;
+        display: block;
+    }
+    button{
+        padding: 10px;
+    }
+    .resultado {
+        padding: 10px;
+    }
+    
 }
